--- a/src/components/Card.module.css
+++ b/src/components/Card.module.css
@@ -1,10 +1,9 @@
 .container{
-    margin: auto;
+  margin: auto;
   width: 300px;
-  height: 220px;
-  border: 1px solid #333;
+   border: 1px solid #333;
   border-radius: 10px;
-  background-color: rgb(255, 255, 255);
+  background-color: #e4e4e4;
   display: flex;
   flex-direction: column;
   align-items: center;
